--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -79,7 +79,7 @@
 /* Fondo general con imagen difuminada */
 .split-login-bg {
 	min-height: 100vh;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -95,7 +95,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	background: url('../../assets/banner.jpg') center center/cover no-repeat;
 	filter: blur(8px) brightness(0.7);
